; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_hda_codec.c_snd_hda_spdif_out_of_nid.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_hda_codec.c_snd_hda_spdif_out_of_nid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hda_spdif_out = type { i64 }
%struct.hda_codec = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.hda_spdif_out* @snd_hda_spdif_out_of_nid(%struct.hda_codec* %0, i64 %1) #0 {
  %3 = alloca %struct.hda_spdif_out*, align 8
  %4 = alloca %struct.hda_codec*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.hda_spdif_out*, align 8
  store %struct.hda_codec* %0, %struct.hda_codec** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 0, i32* %6, align 4
  br label %8

8:                                                ; preds = %28, %2
  %9 = load i32, i32* %6, align 4
  %10 = load %struct.hda_codec*, %struct.hda_codec** %4, align 8
  %11 = getelementptr inbounds %struct.hda_codec, %struct.hda_codec* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp slt i32 %9, %13
  br i1 %14, label %15, label %31

15:                                               ; preds = %8
  %16 = load %struct.hda_codec*, %struct.hda_codec** %4, align 8
  %17 = getelementptr inbounds %struct.hda_codec, %struct.hda_codec* %16, i32 0, i32 0
  %18 = load i32, i32* %6, align 4
  %19 = call %struct.hda_spdif_out* @snd_array_elem(%struct.TYPE_2__* %17, i32 %18)
  store %struct.hda_spdif_out* %19, %struct.hda_spdif_out** %7, align 8
  %20 = load %struct.hda_spdif_out*, %struct.hda_spdif_out** %7, align 8
  %21 = getelementptr inbounds %struct.hda_spdif_out, %struct.hda_spdif_out* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* %5, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %27

25:                                               ; preds = %15
  %26 = load %struct.hda_spdif_out*, %struct.hda_spdif_out** %7, align 8
  store %struct.hda_spdif_out* %26, %struct.hda_spdif_out** %3, align 8
  br label %32

27:                                               ; preds = %15
  br label %28

28:                                               ; preds = %27
  %29 = load i32, i32* %6, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %6, align 4
  br label %8

31:                                               ; preds = %8
  store %struct.hda_spdif_out* null, %struct.hda_spdif_out** %3, align 8
  br label %32

32:                                               ; preds = %31, %25
  %33 = load %struct.hda_spdif_out*, %struct.hda_spdif_out** %3, align 8
  ret %struct.hda_spdif_out* %33
}

declare dso_local %struct.hda_spdif_out* @snd_array_elem(%struct.TYPE_2__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
